--- a/estilo.css
+++ b/estilo.css
@@ -1,11 +1,11 @@
 body{
-    background-color: #07080C;
+    background-color: black;
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 p{
-    background-color: #7C5931;
+    color: #7C5931;
     font-size: larger;
     text-align: center;
 }
@@ -18,22 +18,24 @@ h1{
     color: #8D1602;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: xx-large;
-    font-style: oblique;
 }
 
 div{
     text-align: center;
 }
 
-ol{
-    padding: 45px;
-    background-color: #2A2011;
-    display: inline-block;
-    text-align: center;
-    border-radius: 30px;
-}
-
 button{
     background-color: #94AD9B;
     border-radius: 10px;
+}
+
+#banner{
+    width: 30%;
+    height: 10%;
+    position: relative;
+    left: 35%;
+}
+
+.container{
+    margin: 0 auto;
 }
